--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="google-site-verification" content="5dGgH5Y9pdxRfXwgx2THGIKxTzRodyBmCSR9z0kFTfM" />
+		<meta name="msvalidate.01" content="E35C0DDEB68256250FF46DAF06C3E7C5" />
 		<title>Thin Htoo Han</title>
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
