--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="google-site-verification" content="5dGgH5Y9pdxRfXwgx2THGIKxTzRodyBmCSR9z0kFTfM" />
 		<meta name="msvalidate.01" content="E35C0DDEB68256250FF46DAF06C3E7C5" />
 		<title>Thin Htoo Han</title>
-		<link rel="shortcut icon" href="images/Copy of AI.png" />
+		<link rel="shortcut icon" href="images/0-02-06-b09d996fd461a2e3d526108647533f8a0dced8a44ed98a5e7f91421f190e73c1_full.png" />
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
