--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="home-content">
 					<div class="text-1">Hello, my name is</div>
 					<div class="text-2">Thin Htoo Han</div>
-					<div class="text-3">And I'm <span>AI Specialist</span></div>
+					<div class="text-3">And I'm a <span>Developer</span></div>
 				</div>
 			</div>
 		</section>
