--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="column right">
 						<div class="text">I'm Thin Htoo Han and I'm 
 							<span class="typing-2"></span></div>
-							<p><span>AI Specialist</span> . I am Myanmr. I am interested in creation , technology , problem solving and programming. Among them , I am particularly in AI( Artificial Intelligence ). My hobbies are reading books , writing programs , telling stories and writing comics(mostly stickman comics).</p>
+							<p><span>AI Developer</span> . I am Myanmr. I am interested in creation , technology , problem solving and programming. Among them , I am particularly in AI( Artificial Intelligence ). My hobbies are reading books , writing programs , telling stories and writing comics(mostly stickman comics).</p>
 					</div>
 				</div>
 			</div>
