--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="column right">
 						<div class="text">I'm Thin Htoo Han and I'm 
 							<span class="typing-2"></span></div>
-							<p><span>AI Developer</span> . I am Myanmr. I am interested in creation , technology , problem solving and programming. Among them , I am particularly in AI( Artificial Intelligence ). My hobbies are reading books , writing programs , telling stories and writing comics(mostly stickman comics).</p>
+							<p><span>Developer</span> . I am Myanmr. I am interested in creation , technology , problem solving and programming. Among them , I am particularly in AI( Artificial Intelligence ). My hobbies are reading books , writing programs , telling stories and writing comics(mostly stickman comics).</p>
 					</div>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 				<div class="skills-content">
 					<div class="column left">
 						<div class="text">My Skills</div>
-						<p>I do self-study for programming. So there are many difficulties. But I never give up. And I keep on studying. I am Python and AI specialist learner. But I am not proffessional. This website is also made myself. I have AI Voice Assistant(Lucas O2) and AI chatbot( Lucas O3 ). They are also made myself. If you want to learn with me , Contact me .</p>
+						<p>I am self-taught developer. So there were a lot of  difficulties. But I never give up. And I keep on studying. I am Python and AI specialist learner. But I am not proffessional. This website is also made myself. I have AI Voice Assistant(Lucas O2) and AI chatbot( Lucas O3 ). They are also made myself. If you want to learn with me , Contact me .</p>
 					</div>
 					<div class="column right">
 						<div class="bars">
