--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="skills-content">
 					<div class="column left">
 						<div class="text">My Skills</div>
-						<p>I am self-taught developer. So there were a lot of  difficulties. But I never give up. And I keep on studying. I am Python and AI specialist learner. But I am not proffessional. This website is also made myself. I have AI Voice Assistant(Lucas O2) and AI chatbot( Lucas O3 ). They are also made myself. If you want to learn with me , Contact me .</p>
+						<p>I am a self-taught developer. So there were a lot of  difficulties. But I never give up. And I keep on studying. I am Python and AI specialist learner. But I am not proffessional. This website is also made myself. I have AI Voice Assistant(Lucas O2) and AI chatbot( Lucas O3 ). They are also made myself. If you want to learn with me , Contact me .</p>
 					</div>
 					<div class="column right">
 						<div class="bars">
